Bone selection behaves poorly #75425

Closed
opened 2020-04-06 02:39:38 +02:00 by Thomas · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Worked: version: 2.81

Short description of error
Since version 2.82 the bone selection behavior has changed so that it is unnecessarily hard or even impossible to select certain bones.

Old behavior: Bones were selected if the area or edge of a bone was clicked. If multiple bones of different size are stacked inside of each other, it was easy to select any of them with a single click.
New behavior: The bone selection cycles through all the bones below the mouse cursor, starting with the biggest(?), regardless of the area that was clicked. If the cursor is moved between clicks the cycle starts anew, no matter which bone was selected last. This way several clicks are needed almost everytime to select the intended bone.

Exact steps for others to reproduce the error

The attached file includes a setup of three bones.

  • In pose mode it needs three clicks to select the smallest.
  • In edit mode it's completely impossible to click-select the smallest bone.
    (box/circle/lasso select kinda work but trying to select a single bone with those should not be a thing)

boneSelection.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Worked: version: 2.81 **Short description of error** Since version 2.82 the bone selection behavior has changed so that it is unnecessarily hard or even impossible to select certain bones. Old behavior: Bones were selected if the area or edge of a bone was clicked. If multiple bones of different size are stacked inside of each other, it was easy to select any of them with a single click. New behavior: The bone selection cycles through all the bones below the mouse cursor, starting with the biggest(?), regardless of the area that was clicked. If the cursor is moved between clicks the cycle starts anew, no matter which bone was selected last. This way several clicks are needed almost everytime to select the intended bone. **Exact steps for others to reproduce the error** The attached file includes a setup of three bones. - In pose mode it needs three clicks to select the smallest. - In edit mode it's completely impossible to click-select the smallest bone. (box/circle/lasso select kinda work but trying to select a single bone with those should not be a thing) [boneSelection.blend](https://archive.blender.org/developer/F8451821/boneSelection.blend)
Author

Added subscriber: @TomL

Added subscriber: @TomL

#79024 was marked as duplicate of this issue

#79024 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton self-assigned this 2020-04-09 02:56:20 +02:00

This issue was referenced by bd59781c66

This issue was referenced by bd59781c66e15617b5c0cccfb07b2c0e3079b210

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

This only solves the cycling, but not what bone is supposed to be selected first for both pose mode and edit mode. If a bone is inside another and your mouse is over the smaller bone inside, the old behavour would be for the smaller bone inside to be selected first. This new behaviour makes it harder in some rigging scenarios where the order of active or selected bones matter.

This only solves the cycling, but not what bone is supposed to be selected first for both pose mode and edit mode. If a bone is inside another and your mouse is over the smaller bone inside, the old behavour would be for the smaller bone inside to be selected first. This new behaviour makes it harder in some rigging scenarios where the order of active or selected bones matter.

Added subscriber: @Floreum

Added subscriber: @Floreum

I've made a little demonstration of how selecting overlapping bones currently works versus how it used to work in 2.80. This behavior is in both edit and pose mode which makes creating parenting or constraints tricky to do.
BlenderSelectionBug.mp4

I've made a little demonstration of how selecting overlapping bones currently works versus how it used to work in 2.80. This behavior is in both edit and pose mode which makes creating parenting or constraints tricky to do. [BlenderSelectionBug.mp4](https://archive.blender.org/developer/F8475688/BlenderSelectionBug.mp4)
Author

Glad i'm not the only one struggling with this.
Another case where the new selection system fails is when you use left click select and a gizmo is active. Since you can't select the specific bone you want with a single click anymore, the gizmo will now appear under the cursor and you can't start cycling through bones. This leaves you with scrolling, rotating around the bones or tool changing to either find an angle where the gizmo is not in your way or get rid of the gizmo for a moment.
The old selection understood and supported the users actions. The change feels like a huge step backwards, making selections tedious and more time consuming. By the amount of selections that are made while rigging this really adds up.

Glad i'm not the only one struggling with this. Another case where the new selection system fails is when you use left click select and a gizmo is active. Since you can't select the specific bone you want with a single click anymore, the gizmo will now appear under the cursor and you can't start cycling through bones. This leaves you with scrolling, rotating around the bones or tool changing to either find an angle where the gizmo is not in your way or get rid of the gizmo for a moment. The old selection understood and supported the users actions. The change feels like a huge step backwards, making selections tedious and more time consuming. By the amount of selections that are made while rigging this really adds up.

Added subscribers: @dfelinto, @CobraA

Added subscribers: @dfelinto, @CobraA

In #75425#910749, @Floreum wrote:
I've made a little demonstration of how selecting overlapping bones currently works versus how it used to work in 2.80. This behavior is in both edit and pose mode which makes creating parenting or constraints tricky to do.
BlenderSelectionBug.mp4

Yep this doesn't seem to be resolved at all, it's actually cascaded to 2.83 & 2.90, the 2.81 has the "correct" proper way.
@dfelinto Can you guys re-take a look at this?

> In #75425#910749, @Floreum wrote: > I've made a little demonstration of how selecting overlapping bones currently works versus how it used to work in 2.80. This behavior is in both edit and pose mode which makes creating parenting or constraints tricky to do. > [BlenderSelectionBug.mp4](https://archive.blender.org/developer/F8475688/BlenderSelectionBug.mp4) Yep this doesn't seem to be resolved at all, it's actually cascaded to 2.83 & 2.90, the 2.81 has the "correct" proper way. @dfelinto Can you guys re-take a look at this?

Added subscriber: @SecuoyaEx

Added subscriber: @SecuoyaEx

Whatever happened to this? What we're asking is simple. Let bones be selectable by the closest wire to the mouse cursor, like Objects in wireframe mode already are, not just by their closest zdepth surface.

Why is this a problem? Because it means that everything BUT bones are selectable by their wire. And you guys like consistency, right? That oughta convince ya 😏

And changing the viewport display mode of the object does nothing, so that doesn't help either. It should work on both wireframe shading and per object wireframe display, no brainer.

Whatever happened to this? What we're asking is simple. Let bones be selectable by the closest wire to the mouse cursor, like Objects in wireframe mode already are, not just by their closest zdepth surface. Why is this a problem? Because it means that everything BUT bones are selectable by their wire. And you guys like consistency, right? That oughta convince ya 😏 And changing the viewport display mode of the object does nothing, so that doesn't help either. It should work on both wireframe shading and per object wireframe display, no brainer.

Added subscribers: @LDsanya, @mano-wii

Added subscribers: @LDsanya, @mano-wii

In edit mode it's completely impossible to click-select the smallest bone.

This has been solved. Re-opening #79024 since it describes the other issue.

> In edit mode it's completely impossible to click-select the smallest bone. This has been solved. Re-opening #79024 since it describes the other issue.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75425
No description provided.