Fix T75425: Bone selection cycling not working

Edit-mode bone selection now cycles on successive clicks.
This now cycles through multiple edit-objects & bones.